--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -24,6 +24,8 @@
     <link rel="stylesheet" type="text/css" href="css/util.css"/>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
     <!--===============================================================================================-->
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'></link>
+    <link href='/survei-uts/WebContent/fonts/' rel='stylesheet' type='text/css'></link>
     <title>Form Survei Mahasiswa</title>
     <link rel="icon" href="https://elasticbeanstalk-us-east-1-647474817064.s3.amazonaws.com/nl.ico"></link>
     <style>
